<resources>
    <string name="app_name">MessagingApp</string>
    <string name="avatar_desc">User avatar picture</string>
    <string name="username">Enter your nickname</string>
    <string name="password">Enter your password</string>
    <string name="job_info">What I do</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">Not registered?</string>
    <string name="back_login">Go back to login</string>
    <string name="back">BACK</string>
    <string name="home_button">HOME</string>
    <string name="profile_button">PROFILE</string>
    <string name="floating_desc">Floating button for chat</string>
    <string name="profile_picture">Picture for profile</string>
    <string name="update">UPDATE</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="top_bar_image_description">Top bar image</string>
    <string name="search">Search</string>
    <string name="message">Message</string>
    <string name="send_button">Send</string>
    <string name="not_found">User not found</string>
    <string name="no_conversations_found">No converstaions found for now</string>
</resources>