<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="@dimen/login_image_layout_width"
        android:layout_height="@dimen/login_image_layout_height"
        android:layout_marginTop="@dimen/login_image_margin_top"
        app:cardCornerRadius="@dimen/login_image_corner"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/avatar_desc"
            android:src="@drawable/avatar_image_placeholder" />
    </androidx.cardview.widget.CardView>

    <!--    Dummy view for unfocusing on enter for last visible view -->
    <View
        android:id="@+id/dummy"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/username_height"
        android:layout_marginHorizontal="@dimen/dimen_l"
        android:layout_marginTop="@dimen/dimen_xxl"
        android:background="@drawable/background_rectangle_aqua"
        android:gravity="center"
        android:hint="@string/username"
        android:singleLine="true"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/username_height"
        android:layout_marginHorizontal="@dimen/dimen_l"
        android:layout_marginTop="@dimen/dimen_s"
        android:background="@drawable/background_rectangle_aqua"
        android:gravity="center"
        android:hint="@string/password"
        android:singleLine="true"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/jobInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/username_height"
        android:layout_marginHorizontal="@dimen/dimen_l"
        android:layout_marginTop="@dimen/dimen_s"
        android:background="@drawable/background_rectangle_aqua"
        android:gravity="center"
        android:hint="@string/job_info"
        android:singleLine="true"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_in_button"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/dimen_m"
        android:background="@drawable/background_rectangle_blue"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/register_button_width"
        android:layout_height="@dimen/register_button_height"
        android:layout_marginTop="@dimen/dimen_m"
        android:background="@drawable/background_rectangle_blue"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text"
        android:visibility="gone"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="@dimen/dimen_m"
        android:layout_height="@dimen/dimen_m"
        android:layout_marginTop="@dimen/dimen_xs"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:text="@string/register"
        android:textColor="@color/dark_gray" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_button"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/dimen_xxs"
        android:layout_marginBottom="@dimen/dimen_s"
        android:background="@drawable/background_rectangle_white"
        android:text="@string/sign_up"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/button_text" />


</LinearLayout>