<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.main.views.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_picture"
        android:layout_width="@dimen/login_image_layout_width"
        android:layout_height="@dimen/login_image_layout_height"
        android:layout_marginTop="@dimen/login_image_margin_top"
        app:cardCornerRadius="@dimen/profile_default_radius"
        app:cardElevation="0dp">

        <ProgressBar
            android:id="@+id/profile_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/profile_picture_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/baseline_account_circle_24"
            android:contentDescription="@string/profile_picture" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/username_height"
        android:layout_marginHorizontal="@dimen/dimen_l"
        android:layout_marginTop="@dimen/dimen_xxl"
        android:background="@drawable/background_rectangle_aqua"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/jobInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/username_height"
        android:layout_marginHorizontal="@dimen/dimen_l"
        android:layout_marginTop="@dimen/dimen_s"
        android:background="@drawable/background_rectangle_aqua"
        android:gravity="center"
        android:hint="@string/job_info"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/dark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_button"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/dimen_l"
        android:background="@drawable/background_rectangle_blue"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sign_out_button"
        android:layout_width="@dimen/login_button_width"
        android:layout_height="@dimen/login_button_height"
        android:layout_marginTop="@dimen/dimen_xs"
        android:layout_marginBottom="@dimen/dimen_s"
        android:background="@drawable/background_rectangle_white"
        android:text="@string/sign_out"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/button_text" />

    <ProgressBar
        android:id="@+id/loading"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="@dimen/dimen_xxl"
        android:layout_height="@dimen/dimen_xxl"/>


</LinearLayout>